--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
@@ -10,14 +10,14 @@
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+{#<nav class="navbar navbar-toggleable-md navbar-light bg-faded">#}
 {#    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"#}
 {#            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"#}
 {#            aria-label="Toggle navigation">#}
 {#        <span class="navbar-toggler-icon"></span>#}
 {#    </button>#}
-    <a class="navbar-brand" href="/">The Pod Steam Prophet</a>
-
+{#    <a class="navbar-brand" href="/">The Pod Steam Prophet</a>#}
+{##}
 {#    <div class="collapse navbar-collapse" id="navbarSupportedContent">#}
 {#        <ul class="navbar-nav mr-auto">#}
 {#            <li class="nav-item active">#}
@@ -35,7 +35,7 @@
 {#            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>#}
 {#        </form>#}
 {#    </div>#}
-</nav>
+{#</nav>#}
 
 {% block content %}
 {% endblock %}
