--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
@@ -55,7 +55,7 @@
             = {{ game.unroundedScore|intcomma }}
         </div>
         <div>
-           <b>Rounded down to the nearest thousand:</b>
+           Rounded down to the nearest thousand:
         </div>
         <div>
             = <b>{{ game.score|intcomma }}</b>
