Minor improvement to game detail view.

--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
@@ -6,8 +6,8 @@
         <h1 class="mb-4">Game: {{ object.name }}</h1>
 
         <div class="row mb-2 justify-content-start">
-            <div class="col-lg-1"><a href="{{ game.steamspyURL }}">SteamSpy</a></div>
-            <div class="col-lg-1"><a href="{{ game.steamURL }}">Steam</a></div>
+            <div class="col-lg-1 col-md-2"><a href="{{ game.steamspyURL }}">SteamSpy</a></div>
+            <div class="col-lg-1 col-md-2"><a href="{{ game.steamURL }}">Steam</a></div>
         </div>
 
         <div class="mb-2">
