Add intcomma filter to players and players variance.

--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
@@ -32,14 +32,14 @@
             <b>Players</b>
         </div>
         <div class="mb-2">
-            {{ game.players }}
+            {{ game.players|intcomma }}
         </div>
 
         <div>
             <b>Players Variance</b>
         </div>
         <div class="mb-2">
-            {{ game.playersVariance }}
+            {{ game.playersVariance|intcomma }}
         </div>
 
         <div>
