Parse and show releasedate

--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
@@ -14,12 +14,12 @@
 
         </div>
 
-{#        <div>#}
-{#            <b>Release date</b>#}
-{#        </div>#}
-{#        <div class="mb-2">#}
-{#            {{ game.releaseDate }}#}
-{#        </div>#}
+        <div>
+            <b>Release date</b>
+        </div>
+        <div class="mb-2">
+            {{ game.releaseDate }}
+        </div>
 
         <div>
             <b>Lowest price</b>
