--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
@@ -5,7 +5,7 @@
     <div class="container">
         <h1 class="mb-4">Game: {{ object.name }}</h1>
 
-        <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{ game.appID }}/header.jpg" class="img-responsive">
+        <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{ game.appID }}/header.jpg" class="img-fluid">
 
         <div class="row mb-2 justify-content-start">
             <div class="col-lg-1 col-md-2"><a href="{{ game.steamspyURL }}">SteamSpy</a></div>
