--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <title>The Pod Steam Prophet</title>
+    <title>The Pod Fantasy Steam</title>
 </head>
 <body>
 
