--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_list.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_list.html
@@ -8,6 +8,9 @@
                 <tr>
                     <th>#</th>
                     <th>Name</th>
+                    <th>Release Date</th>
+                    <th>Players (lower bound)</th>
+                    <th>Price</th>
                     <th>Score</th>
                 </tr>
             </thead>
@@ -16,6 +19,9 @@
                     <tr>
                         <td>{{ forloop.counter }}</td>
                         <td><a href="{% url 'game' pk=game.pk %}">{{ game.name }}</a></td>
+                        <td>{{ game.releaseDate }}</td>
+                        <td>{{ game.playersLowerBound }}</td>
+                        <td>$ {{ game.price }}</td>
                         <td>{{ game.score|intcomma }}</td>
                     </tr>
                 {% endfor %}
