--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <div class="container">
-        <h1 class="mb-4">Game: {{ object.name }}</h1>
+        <h1 class="mb-4">Game: {{ object.name }}{% if game.matured %}*{% endif %}</h1>
 
         <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{ game.appID }}/header.jpg" class="img-fluid">
 
@@ -59,8 +59,11 @@
             = <b>{{ game.score|intcomma }}</b>
         </div>
 
+        <div class="mb-2"></div>
+        <p>This game has matured and will earn no more points.</p>
+
         {% if user.is_staff %}
-            <div class="mb-2"></div>
+            <div class="mb-"></div>
             <a href="{% url 'delete_game' game.pk %}"><button type="button" class="btn btn-danger">Delete game</button></a>
         {% endif %}
     </div>
