--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_list.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_list.html
@@ -18,7 +18,7 @@
             <tbody>
                 {% for game in game_list %}
                     <tr>
-                        <td>{{ forloop.counter }}</td>
+                        <td>{{ page_obj.start_index|add:forloop.counter0 }}</td>
                         <td>
                             <a href="{% url 'game' pk=game.pk %}">{{ game.name }}</a>
                             {% if game.matured %}
@@ -34,6 +34,34 @@
                 {% endfor %}
             </tbody>
         </table>
+
+        {% if is_paginated %}
+            <nav>
+                <ul class="pagination">
+                    {% if page_obj.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+                                Previous
+                            </a>
+                        </li>
+                    {% endif %}
+
+                    {% for page in paginator.page_range %}
+                        <li class="page-item {% if page == page_obj.number %}active{% endif %}">
+                            <a class="page-link" href="?page={{ page }}">{{ page }}</a>
+                        </li>
+                    {% endfor %}
+
+                    {% if page_obj.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+                                Next
+                            </a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </nav>
+        {% endif %}
 
         <p>
             Games marked with an asterisk have matured and will earn no more points.
