--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/base.html
@@ -43,5 +43,9 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
+
+{% block AdditionalScripts %}
+{% endblock %}
+
 </body>
 </html>
