--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
@@ -120,7 +120,9 @@
                 </div>
 
                 <div class="mb-2"></div>
-                <p>This game has matured and will earn no more points.</p>
+                {% if game.matured %}
+                    <p>This game has matured and will earn no more points.</p>
+                {% endif %}
 
                 {% if user.is_staff %}
                     <div class="mb-"></div>
