Re-add pagination.

--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_list.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_list.html
@@ -16,10 +16,9 @@
                 </tr>
             </thead>
             <tbody>
-                {% for game in game_list %}
+                {% for game in object_list %}
                     <tr>
-{#                        <td>{{ page_obj.start_index|add:forloop.counter0 }}</td>#}
-                        <td>{{ forloop.counter }}</td>
+                        <td>{{ page_obj.start_index|add:forloop.counter0 }}</td>
                         <td>
                             <a href="{% url 'game' pk=game.pk %}">{{ game.name }}</a>
                             {% if game.matured %}
