--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/player_list.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/player_list.html
@@ -8,7 +8,7 @@
                 <tr>
                     <th>#</th>
                     <th>Name</th>
-                    <th>Score</th>
+                    <th style="text-align: right">Score</th>
                 </tr>
             </thead>
             <tbody>
@@ -16,7 +16,7 @@
                     <tr>
                         <td>{{ forloop.counter }}</td>
                         <td><a href="{% url 'player' pk=player.pk %}">{{ player.name }}</a></td>
-                        <td>{{ player.score|intcomma }}</td>
+                        <td style="text-align: right">{{ player.score|intcomma }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
