--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/player_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/player_detail.html
@@ -27,7 +27,7 @@
                         {% endif %}
                         {% if pick.game.matured %}*{% endif %}
                         </a></td>
-                        <td style="text-align:right;">{{ pick.score|intcomma }}</td>
+                        <td style="text-align:right;">{{ pick.score|intcomma }} $</td>
                     </tr>
                     {% endfor %}
                 </tbody>
