--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
@@ -104,19 +104,19 @@
                     <b>Score</b>
                 </div>
                 <div>
-                    {{ game.price }} * max(0, {{ game.players|intcomma }} - {{ game.playersVariance|intcomma }})
+                    {{ game.price }} $ * max(0, {{ game.players|intcomma }} - {{ game.playersVariance|intcomma }})
                 </div>
                 <div>
-                    = {{ game.price }} * {{ game.playersLowerBound|intcomma }}
+                    = {{ game.price }} $ * {{ game.playersLowerBound|intcomma }}
                 </div>
                 <div>
-                    = {{ game.unroundedScore|intcomma }}
+                    = {{ game.unroundedScore|intcomma }} $
                 </div>
                 <div>
                     Rounded down to the nearest thousand:
                 </div>
                 <div>
-                    = <b>{{ game.score|intcomma }}</b>
+                    = <b>{{ game.score|intcomma }} $</b>
                 </div>
 
                 <div class="mb-2"></div>
