Add some slight padding to the main container. Also rename AdditionalScripts to extrascripts

--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
@@ -1,7 +1,7 @@
 {% extends 'SteamProphet/base.html' %}
 {% load humanize %}
 
-{% block AdditionalScripts %}
+{% block extrascripts %}
 <script src="https://code.highcharts.com/stock/highstock.js"></script>
 <script id="history" type="application/json">
     {{ game.history|safe }}
