Do not write Game: before a game's title. Or Player: before a player's name.

--- a/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
+++ b/SteamProphet/apps/SteamProphet/templates/SteamProphet/game_detail.html
@@ -63,7 +63,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1 class="mb-4">Game: {{ object.name }}{% if game.matured %}*{% endif %}</h1>
+                <h1 class="mb-4">{{ object.name }}{% if game.matured %}*{% endif %}</h1>
 
                 <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{ game.appID }}/header.jpg" class="img-fluid">
 
